--- a/crud-php-prototipo-refactorizado-main/frontend/studentsSubjects.html
+++ b/crud-php-prototipo-refactorizado-main/frontend/studentsSubjects.html
@@ -29,13 +29,8 @@
        </select>
       </div>
       <div class="w3-third">
-        <label>Condicion</label>
-        <select name="condition_form" id="condition" required>
-            <option value="">Seleccione una opcion</option>
-            <option value="Habilitada">Habilitada</option>
-            <option value="Recursada">Recursada</option>
-            <option value="Promocionada">Promocionada</option>
-        </select>
+        <label>Aprobado</label>
+        <input type="checkbox" id="approved" class="w3-check" />
       </div>
     </div>
 
@@ -50,7 +45,7 @@
       <tr class="w3-teal">
         <th>Nombre</th>
         <th>Materia</th>
-        <th>Condicion</th>
+        <th>Aprobado</th>
         <th>Acciones</th>
       </tr>
     </thead>
