--- a/crud-php-prototipo-refactorizado-main/frontend/html/students.html
+++ b/crud-php-prototipo-refactorizado-main/frontend/html/students.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gestión de Estudiantes</title>
-  <link rel="stylesheet" href="css/w3.css" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="../css/w3.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <script type="module" src="./js/Controllers/studentsController.js"></script>
 </head>
 <body class="w3-container w3-light-grey">
 
@@ -55,6 +56,5 @@
     Materias →
   </a>
   </aside>
-  <script src="js/frontDispatcher.js"></script>
 </body>
 </html>
