Refactoring Back y Front
 Añado mas de los cambios implementados por el profe.

--- a/crud-php-prototipo-refactorizado-main/frontend/html/students.html
+++ b/crud-php-prototipo-refactorizado-main/frontend/html/students.html
@@ -7,7 +7,7 @@
   <title>Gestión de Estudiantes</title>
   <link rel="stylesheet" href="../css/w3.css" />
   <link rel="stylesheet" href="../css/styles.css" />
-  <script type="module" src="./js/Controllers/studentsController.js"></script>
+  <script type="module" src="../js/Controllers/studentsController.js"></script>
 </head>
 <body class="w3-container w3-light-grey">
 
