Commit - Pretty Alerts
Mejoramos el sistema de alertas!

--- a/crud-php-prototipo-refactorizado-main/frontend/html/students.html
+++ b/crud-php-prototipo-refactorizado-main/frontend/html/students.html
@@ -37,7 +37,9 @@
       <button class="w3-button w3-blue" type="reset" onclick="document.getElementById('studentId').value = ''" id="cancelBtn">Cancelar</button>
     </div>
   </form>
-
+  <div id="errores">
+    
+  </div>
   <table class="w3-table-all w3-hoverable w3-card">
     <thead>
       <tr class="w3-light-blue">
