--- a/crud-php-prototipo-refactorizado-main/frontend/html/subjects.html
+++ b/crud-php-prototipo-refactorizado-main/frontend/html/subjects.html
@@ -28,7 +28,9 @@
       <button class="w3-button w3-amber" type="reset" onclick="document.getElementById('subjectId').value = ''" id="cancelBtn">Cancelar</button>
     </div>
   </form>
-
+  <div id="errores">
+    
+  </div>
   <table class="w3-table-all w3-hoverable w3-card">
     <thead>
       <tr class="w3-amber">
